--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <p><span>E-mail: </span> dm1471@srmist.edu.in </p>
                             </div>
                             <div class="col s6">
-                                <p><span>Graduation year </span>2022</p>
+                                <p><span>Graduation year: </span>2022</p>
                             </div>
 
                         </div>
