--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-        integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+   
+    <script src="https://kit.fontawesome.com/7e0d0cfb57.js" crossorigin="anonymous"></script>
+    
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
@@ -387,9 +388,10 @@
                   <div style="margin-top: 5rem;">
                       <h5>Contact via social</h5>
                       <div style="margin-top: 2rem;">
-                        <a href=""><i class=" small fab fa-twitter red-text text-accent-2" style="padding-right: 2rem;"></i></a> 
-                        <a href=""><i class=" small fab fa-instagram red-text text-accent-2" style="padding-right: 2rem;"></i></a>
-                        <a href=""><i class=" small fab fa-facebook red-text text-accent-2"></i></a>
+                        <a href=""><i class=" small fab fa-twitter red-text text-accent-2" style="padding-right: 1.5rem;"></i></a> 
+                        <a href=""><i class=" small fab fa-instagram-square red-text text-accent-2" style="padding-right: 1.5rem;"></i></a>
+                        <a href=""><i class=" small fab fa-facebook red-text text-accent-2" style="padding-right: 1.5rem;"></i></a>
+                        <a href=""><i class=" small fab fa-linkedin red-text text-accent-2"></i></a>
                     </div>
 
                   </div>
